--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="progress"></div>
       </div>
       <div class="amount-raised">
-        <span class="current-amount">$1200</span> raised of $5000
+        <span class="current-amount">N1200</span> raised of N5000
       </div>
 
       <div class="donate-form">
